@startuml Factory Method + Singleton - Sensores Industriais

title Factory Method + Singleton — Sistema de Monitoramento de Sensores

interface LeituraSensor {
  + ler(valorMedido: double): ResultadoLeitura
  + getTipo(): String
}

class SensorTemperatura {
  - LIMITE_ALERTA: double
  - LIMITE_CRITICO: double
  + ler(valorMedido: double): ResultadoLeitura
  + getTipo(): String
}

class SensorPressao {
  - LIMITE_ALERTA: double
  - LIMITE_CRITICO: double
  + ler(valorMedido: double): ResultadoLeitura
  + getTipo(): String
}

class SensorFactory {
  - {static} instance: SensorFactory
  - SensorFactory()
  + {static} getInstance(): SensorFactory
  + obterSensor(tipo: String): LeituraSensor
}

class ResultadoLeitura {
  - tipoSensor: String
  - valorLido: double
  - status: String
  - mensagem: String
  - dataLeitura: LocalDateTime
}

class App {
  + {static} main(args: String[]): void
}

LeituraSensor <|.. SensorTemperatura
LeituraSensor <|.. SensorPressao

SensorFactory ..> SensorTemperatura : <<create>> via Reflection
SensorFactory ..> SensorPressao : <<create>> via Reflection
SensorFactory ..> LeituraSensor : retorna (tipo abstrato)
LeituraSensor ..> ResultadoLeitura : produz

App ..> SensorFactory : getInstance().obterSensor(tipo)

note right of SensorFactory
  **Factory Method**: obterSensor(tipo)
  usa Class.forName("...Sensor" + tipo)
  para decidir o produto em runtime.

  **Singleton**: construtor privado +
  instance estática + getInstance().

  Substitui as antigas subclasses
  SensorTemperaturaFactory e
  SensorPressaoFactory.
end note

@enduml
